[gd_scene load_steps=10 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=5]
[ext_resource path="res://Story.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -23.0
margin_bottom = -23.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextDisplay" type="Label" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 976.0
margin_bottom = 475.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 1 )
text = "Placeholder Text"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 479.0
margin_right = 976.0
margin_bottom = 552.0
alignment = 2

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 826.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
align = 1

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 830.0
margin_right = 903.0
margin_bottom = 73.0
grow_horizontal = 0
rect_min_size = Vector2( 73, 73 )
action_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 907.0
margin_top = 5.0
margin_right = 976.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 3 )
text = "OK"
align = 1

[node name="StoryBook" type="Node" parent="."]

[node name="Story1" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a name", "a title", "a place", "a verb", "a noun" )
story = "In the far future %s the %s of %s decided that the best way to control the populace was to %s the %s."

[node name="Story2" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a place", "a name", "a verb", "a noun", "a verb" )
story = "In the quaint town of %s the great %s boldy %s to the impeccably named %s and then %s all over town."
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
